--- a/src/components/Secciones.astro
+++ b/src/components/Secciones.astro
@@ -4,7 +4,7 @@
 
 <section
   id="inicio"
-  class="grid grid-cols-1 md:grid-cols-4 gap-6 px-8 py-16 bg-gradient-to-b from-blue-950 to-cyan-900"
+  class="grid grid-cols-1 md:grid-cols-5 gap-6 px-8 py-16 bg-gradient-to-b from-blue-950 to-cyan-900"
 >
   <!-- EMPRESA -->
   <a
@@ -43,6 +43,26 @@
       class="absolute bottom-6 left-6 text-3xl font-bold text-white group-hover:text-cyan-300 transition-colors"
     >
       Componentes
+    </h2>
+  </a>
+
+  <!-- SISTEMA -->
+  <a
+    href="#sistema"
+    class="relative h-64 rounded-2xl overflow-hidden group shadow-lg hover:scale-105 transform transition-transform duration-500"
+  >
+    <img
+      src="/Sistema.jpg"
+      alt="Sistema Embebido"
+      class="absolute inset-0 w-full h-full object-cover opacity-80 group-hover:opacity-100 transition-opacity duration-500"
+    />
+    <div
+      class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent group-hover:from-cyan-700/40 transition-all duration-500"
+    ></div>
+    <h2
+      class="absolute bottom-6 left-6 text-3xl font-bold text-white group-hover:text-cyan-300 transition-colors"
+    >
+      Sistema
     </h2>
   </a>
 
